[tool.poetry]
name = "mp3-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mp3_converter"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pytube = "^15.0.0"
pydub = "^0.25.1"
yt-dlp = "^2024.9.27"
imageio = {extras = ["ffmpeg"], version = "^2.35.1"}
spotipy = "^2.24.0"
google-api-python-client = "^2.149.0"
pyinstaller = "^6.10.0"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
